# Hearthvale

./: .gitignore  CMakeLists.txt  README.md
config/: input.ini
docs/: README.md  upcoming.md
docs/concepts/: gameloop-introduction.md
docs/posts/: 2025-06-21-hearthvale-window-bootstrap.md  2025-06-22-hearthvale-glad-setup.md  2025-06-29-hearthvale-render-interface-clear-color.md
engine/: CMakeLists.txt  RenderUtils.cpp  RenderUtils.h  Renderer.cpp  Renderer.h  Window.cpp  Window.h  Window.hpp
engine/glad/: glad.c  glad.h
engine/input/: CMakeLists.txt  InputManager.cpp  InputManager.h  InputTypes.h  KeyCodeDefines.inl
game/: main.cpp
plans/: Hearthvale_Dev_Plan.md
tools/: generate_keys.py
